# gnome-ostree-integration

./: .gitmodules  Makefile-installboot.am  Makefile-integration.am  Makefile-journal-log-hack.am  Makefile.am  autogen.sh  configure.ac  gnome-ostree-integration.doap
src/: gnome-ostree-initial-setup-by-default.service.in  initial-setup-by-default  lib-group  lib-passwd  os-release.in  tmpfiles-gnome-ostree.conf
src/gnome-continuous-journal-log-hack/: main.c
src/installboot/: gnome-ostree-install-boot  gnome-ostree-install-bootloader.service.in  gnome-ostree-install-bootloader.target
src/pam/: common-auth  common-session  common-session-noninteractive
